Merge mainline branch to support Spring-Boot 3 (#345)
* Adapt to spring-boot-3

* remove private for `@BeforeEach`

* remove `private` for `@BeforeEach`

* remove `private` for `@AfterEach`

* Upgrade CI JDK version to 17

* Upgrade CI JDK version to 17

* fix miss `maven { url = uri("https://repo.spring.io/milestone") }`

* update version 2.0.0-RC1 for cosid-benchmark

* fix JAVA11 reflection exception

* fix : Could not find org.springframework.boot:spring-boot-dependencies:3.0.0-RC1.

* update version

* - Update dependency org.springframework.boot:spring-boot-dependencies to 3.0.1
- Update dependency org.springframework.cloud:spring-cloud-dependencies to 2022.0.0
- Remove '@Primary' from shareSnowflakeId

* Merge main branch features